Fix Get All Summarize, By Category & Location
