# Controller/SummarizeController.js
@@ -41,39 +41,30 @@ const addSummarize =  async(req, res, next) => {
     }
 }
 
-const getSummarize = async(req, res, next) => {
+const getAllSummarize = async(req, res, next) => {
     try {
         const getAllSummarize = await Summarize.findAll({});
 
-        const {
-            userID,
-            username,
-            caption,
-            location,
-            summarize,
-            typeSummarize,
-            category
-            // createdBy
-        } = req.body
+        // const {
+        //     userID,
+        //     username,
+        //     caption,
+        //     location,
+        //     summarize,
+        //     typeSummarize,
+        //     category
+        //     // createdBy
+        // } = req.body
 
-        const getSummmarizeLocation = await Summarize.findAll({
-            where: {location: location}
-        })
+        // const getSummmarizeLocation = await Summarize.findAll({
+        //     where: {location: location}
+        // })
 
-        if (location !== undefined) {
-            res.json({
-                status:'true',
-                message: 'success', 
-                getSummmarizeLocation
-            });
-        }
-        else {
-            res.json({
-                status:'true',
-                message: 'success', 
-                getAllSummarize
-            });
-        }
+        res.json({
+            status:'true',
+            message: 'success', 
+            getAllSummarize
+        });
     } catch (err) {
         console.error(err.message);
         res.status(500).json({
@@ -114,8 +105,71 @@ const getSummarizeByID =  async(req, res, next) => {
     }
 }
 
+const getSummarizeByCategory =  async(req, res, next) => {
+    try {
+        const category = req.params.category;
+
+        const getSummarize = await Summarize.findAll({
+            where: { category:category }
+        });
+
+        if (category !== undefined) {
+            res.json({
+                status: 'true',
+                message: 'success',
+                getSummarize
+            });
+        }
+        else {
+            res.status(404).json({
+                status: 'false',
+                message: "Summarize doesn't found"
+            });
+        }
+    } catch (err) {
+        console.error(err.message);
+        res.status(500).json({
+            status:'false',
+            message: 'Internal Server Error'
+        });
+    }
+}
+
+const getSummarizeByLocation =  async(req, res, next) => {
+    try {
+        const category = req.params.category;
+        const location = req.params.location;
+
+        const getSummarize = await Summarize.findAll({
+            where: { category:category, location:location }
+        });
+
+        if (category !== undefined) {
+            res.json({
+                status: 'true',
+                message: 'success',
+                getSummarize
+            });
+        }
+        else {
+            res.status(404).json({
+                status: 'false',
+                message: "Summarize doesn't found"
+            });
+        }
+    } catch (err) {
+        console.error(err.message);
+        res.status(500).json({
+            status:'false',
+            message: 'Internal Server Error'
+        });
+    }
+}
+
 module.exports = {
     addSummarize,
-    getSummarize,
-    getSummarizeByID
+    getAllSummarize,
+    getSummarizeByID,
+    getSummarizeByCategory,
+    getSummarizeByLocation
 }
