# Routes/UserRoute.js
@@ -1,7 +1,7 @@
 const UserController = require('../Controller/UserController');
 const router = require('express').Router();
 
-// Routes untuk Summarize
+// Routes untuk User
 router.post('/register', UserController.register);
 router.post('/login', UserController.login);
 
